# copal

./: .gitignore  CLAUDE.md  LICENSE  MERGE_PLAN.md  NOTICE  README.md  SECURITY_AUDIT_REPORT.md  THIRD_PARTY_NOTICES.md  WORKFLOW.md  project_tracker_handoff.md  pyproject.toml
.claude/: settings.json
.claude/agents/: copal-cross-package.md  copal-doc-curator.md  copal-gotcha-reviewer.md
.claude/commands/: copal-cross-package.md  copal-deploy.md  copal-doc-check.md  copal-gotcha-check.md  copal-handoff.md  copal-phase-close.md  copal-phase-open.md  copal-status.md  copal-test.md
.claude/hooks/: commit_trailer_guard.py  doc_drift_reminder.py  schema_change_warning.py
client/: checkout.py  client_connect.py  pyproject.toml  tui.py
client/copal_core/: api.py  config.py  fs.py  pm_hooks.py  registry.py  sync.py  transport.py  versioning.py
client/tests/integration/: test_server.py
client/tests/unit/: test_sync.py
copalblender/: CLAUDE.md  NOTICE  README.md  pyproject.toml
copalblender/src/copalblender/: __init__.py  cli.py  installer.py  platform_paths.py
copalblender/src/copalblender/assets/addon/copal_blender/: __init__.py  activity.py  copalpm_client.py  preferences.py  status_panel.py  tracker.py
copalblender/tests/integration/: test_cli_smoke.py
copalblender/tests/unit/: conftest.py  test_activity.py  test_copalpm_client_http.py  test_copalpm_client_whose.py  test_installer_copy.py  test_installer_detect.py  test_platform_paths.py  test_tracker_state_machine.py
copalpm/: .gitignore  CLAUDE.md  NOTICE  README.md  project_tracker_handoff.md  pyproject.toml  run_stateholder.bat
copalpm/scripts/: generate_icons.py
copalpm/src/copalpm/: cli.py  config.py  copalvx_api.py  deliver_cli.py  pm.py  project_doctor.py  project_lookup.py  project_record.py  setup_cmd.py  shell_integration.py  task_tracker.py  template_cli.py  templates.py  time_cli.py  tui_app.py
copalpm/src/copalpm/assets/macos_workflow/: Info.plist.file.template  Info.plist.template  NOTES.md  document.wflow.file.template  document.wflow.template
copalpm/tests/integration/: test_shell_integration_windows.py  test_subcommands.py
copalpm/tests/unit/: test_cli_parser.py  test_copalvx_api.py  test_data_dir_migration.py  test_deliverables_batch.py  test_deliverables_schema.py  test_imports.py  test_mark_deliverable_handler.py  test_pm_slug.py  test_project_doctor.py  test_project_lookup.py  test_save_yaml.py  test_setup_cmd.py  test_shell_integration.py  test_task_tracker_switch.py  test_templates.py  test_time_cli.py  test_time_cli_switch.py  test_tui_deliverable_modal.py  test_tui_doctor.py  test_tui_modal_polish.py
copalvx/: CLAUDE.md  MERGE_PLAN.md  README.md
copalvx/client/: app.py  pyproject.toml  tui.py
copalvx/client/copal_core/: api.py  config.py  fs.py  pm_hooks.py  registry.py  sync.py  transport.py
copalvx/client/tests/integration/: test_pm_hooks_contract.py  test_server.py
copalvx/client/tests/unit/: test_api_confirm_delete.py  test_api_identity.py  test_atomic_download.py  test_hash_cache.py  test_registry.py  test_transport.py  test_tui_helpers.py  test_versioning.py
copalvx/server/: .env.example  DEPLOY.md  docker-compose.yml
copalvx/server/app/: dockerfile  init_db.py  main.py
server/: .env.example  docker-compose.yml
server/app/: database.py  init_db.py  main.py  pyproject.toml  requirements.txt
src/copalpm/: config.py  deliver_cli.py  task_tracker.py
src/project_registry/: config.py  copalvx_api.py  deliver_cli.py  pm.py  project_record.py  task_tracker.py  time_cli.py  tui_app.py
tests/integration/: test_subcommands.py
tests/unit/: test_imports.py
